Fixed z-index bug with menu and enable lightbox for images on all web site pages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,8 +115,11 @@ pre {
     position: relative;
 }
 
-/* Styling for inline code (no pre element) */
-code {
+/* Styling for inline code (no pre element). Make sure not to select code elements
+which have the class `has-jax`, as this is used for inline math and MathJAX
+rendering.
+*/
+code:not(.has-jax) {
     border-radius: 5px; 
     -moz-border-radius: 5px; 
     -webkit-border-radius: 5px; 
@@ -266,7 +269,10 @@ figure img {
 
 .menu {
     display: block;
-    z-index: 999999;
+
+    /* The z-index of the photo overlay is 1500, so make sure this is less! */
+    z-index: 1000;
+
     margin: 0;
     margin-top: 20px;
     padding: 0;
